--- a/index.html
+++ b/index.html
@@ -45,7 +45,38 @@
       <!-- SITE MAIN SECTION  -->
       <div class="main">
         <h1>Website Title Here</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sodales turpis in sodales hendrerit. In non odio mi. In eu ex sit amet arcu iaculis pretium. Duis iaculis lorem ut eros vulputate faucibus. Morbi quis ipsum tincclassunt velit sagittis venenatis. Donec porta eu nisi a viverra. Sed ac risus lectus. Nulla at lorem accumsan, sagittis nisl in, mattis odio. Duis rhoncus sed lorem eget aliquet. Cras a velit augue. Sed semper cursus varius. Vivamus eget elit arcu. Donec ultricies dictum neque, quis porta lectus imperdiet auctor. Nullam metus diam, sollicitudin ut lorem quis, varius cursus lacus. Maecenas scelerisque turpis augue, ut porta magna viverra a. Integer vitae lorem ex.
+        </p>
+<p>
+Integer tincclassunt, ipsum non efficitur luctus, metus mauris pretium turpis, a bibendum lacus lacus vel elit. Duis commodo ligula class vehicula posuere. Quisque justo ipsum, rhoncus a molestie nec, consequat sed metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In hac habitasse platea dictumst. Nam in cursus nulla. Phasellus pellentesque eleifend turpis ut ullamcorper. Morbi sodales neque at purus condimentum, tincclassunt interdum nunc vulputate.
+
+Proin sed magna velit. Nulla vel ullamcorper mi. Maecenas porta ex non massa imperdiet, placerat condimentum ligula consectetur. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam at dolor varius, mattis augue a, finibus libero. Nam non nisi interdum, condimentum augue sit amet, facilisis odio. Aenean pharetra consectetur pretium.
+</P>
+<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sodales turpis in sodales hendrerit. In non odio mi. In eu ex sit amet arcu iaculis pretium. Duis iaculis lorem ut eros vulputate faucibus. Morbi quis ipsum tincclassunt velit sagittis venenatis. Donec porta eu nisi a viverra. Sed ac risus lectus. Nulla at lorem accumsan, sagittis nisl in, mattis odio. Duis rhoncus sed lorem eget aliquet. Cras a velit augue. Sed semper cursus varius. Vivamus eget elit arcu. Donec ultricies dictum neque, quis porta lectus imperdiet auctor.
+</p>
+</div>
+
+  <!-- SITE SIDEBAR  -->
+  <div class="sidebar">
+    <h2>Second Header</h2>
+    <ul>
+      <li><a href="#"><Link Something Here</a></li>
+      <li><a href="#"><Link Something Here</a></li>
+      <li><a href="#"><Link Something Here</a></li>
+      <li><a href="#"><Link Something Here</a></li>
+      <li><a href="#"><Link Something Here</a></li>
+      <li><a href="#"><Link Something Here</a></li>
+      <li><a href="#"><Link Something Here</a></li>
+    </ul>
+  </div>
+
+<!-- SITE BAR  -->
+<div class="footer">
+  <p>copyright</p>
+</div>
+</div>
+</body>  
 
 
 </html>
