--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sodales turpis in
   <div class="sidebar">
     <h2>Second Header</h2>
     <ul>
-      <li><a href="#"><Link Something Here</a></li>
-      <li><a href="#"><Link Something Here</a></li>
-      <li><a href="#"><Link Something Here</a></li>
-      <li><a href="#"><Link Something Here</a></li>
-      <li><a href="#"><Link Something Here</a></li>
-      <li><a href="#"><Link Something Here</a></li>
-      <li><a href="#"><Link Something Here</a></li>
+      <li><a href="#">Link Something Here</a></li>
+      <li><a href="#">Link Something Here</a></li>
+      <li><a href="#">Link Something Here</a></li>
+      <li><a href="#">Link Something Here</a></li>
+      <li><a href="#">Link Something Here</a></li>
+      <li><a href="#">Link Something Here</a></li>
+      <li><a href="#">Link Something Here</a></li>
     </ul>
   </div>
 
@@ -76,7 +76,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sodales turpis in
   <p>copyright</p>
 </div>
 </div>
-</body>  
+</body>
 
 
 </html>
